# memento

./: pyproject.toml
.github/workflows/: python-ci.yml
src/memento/: core.py  memento.db  query.py  region.py  region_store.py  runtime.py
src/memento/logs/: Planner.jsonl
tests/: test_flow.py  test_query.py
